fixed extra margin width

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color:rgb(245, 243, 243);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     margin: 0;
+    
     
 }
 
@@ -192,3 +193,5 @@ td{
   margin-right: 19px;
   margin-left: 19px;
 }
+
+
